--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ google_analytics: UA—163839465-1
 author:
   name             : "Siddharth Nayak"
   avatar           : "siddharth_nayak.jpg"
-  bio              : "Graduate Student at Massachusetts Institute of Technology"
+  bio              : "PhD Student at Massachusetts Institute of Technology"
   location         : "Cambridge, MA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
