--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Blog"
     url: /year-archive/
 
-  - title: "Paper Summaries"
-    url: /paper_summaries/
+  # - title: "Paper Summaries"
+  #   url: /paper_summaries/
     
   - title: "CV"
     url: /cv/
