--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ google_analytics: UA—163839465-1
 author:
   name: "Siddharth Nayak"
   avatar: "sid.jpg"
-  bio: "PhD Student at Massachusetts Institute of Technology"
+  bio: "PhD Student at MIT"
   location: "Cambridge, MA"
   employer:
   pubmed: #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
